--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,13 +1,46 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>Login</ion-title>
+    <ion-title>Iniciar sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <ion-input
+      type="email"
+      formControlName="email"
+      required
+      placeholder="Ingresa tu correo electrónico"
+      type="email"
+      fill="solid"
+      label="Email"
+      labelPlacement="floating"
+      helperText="Enter a valid email"
+      errorText="Por favor, ingresa un correo electrónico válido."
+      ngModel
+      email
+    ></ion-input>
+
+    <ion-input
+      type="password"
+      formControlName="password"
+      required
+      placeholder="Ingresa tu contraseña"
+      type="email"
+      fill="solid"
+      label="Contraseña"
+      labelPlacement="floating"
+      helperText="Enter a valid email"
+      errorText="
+      Por favor, ingresa una contraseña válida."
+      ngModel
+      email
+    ></ion-input>
+
+    <div class="ion-text-center">
+      <ion-button type="submit" [disabled]="loginForm.invalid">
+        Iniciar sesión
+      </ion-button>
+    </div>
+  </form>
 </ion-content>
