--- a/src/app/pages/my-sales/my-sales.page.html
+++ b/src/app/pages/my-sales/my-sales.page.html
@@ -1,13 +1,34 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>MySales</ion-title>
+    <ion-title>Mis ventas</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">MySales</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-card *ngFor="let venta of ventas">
+    <ion-card-header>
+      <ion-card-subtitle>Fecha: {{ venta.fecha }}</ion-card-subtitle>
+      <ion-card-title>{{ venta.nombre }}</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-row>
+        <ion-col>
+          <ion-icon name="cash-outline"></ion-icon>
+          <ion-label>Precio: {{ venta.precio }}</ion-label>
+        </ion-col>
+        <ion-col>
+          <ion-icon name="cart-outline"></ion-icon>
+          <ion-label>Cantidad: {{ venta.cantidad }}</ion-label>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-icon name="person-outline"></ion-icon>
+          <ion-label>Vendido por: {{ venta.vendedor }}</ion-label>
+        </ion-col>
+      </ion-row>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
