--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -117,3 +117,13 @@ ion-note {
 ion-item.selected {
   --color: var(--ion-color-primary);
 }
+
+ion-menu::part(backdrop) {
+  background-color: rgba(4, 255, 0, 0.5);
+}
+
+ion-menu::part(container) {
+  border-radius: 0 20px 20px 0;
+
+  box-shadow: 4px 0px 16px rgba(4, 255, 0, 0.18);
+}
