--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,13 +1,9 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>home</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">home</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-button id="open-toast">Open Toast</ion-button>
+  <ion-toast
+    trigger="open-toast"
+    message="Hello World!"
+    [duration]="3000"
+    icon="checkmark-circle"
+  ></ion-toast>
 </ion-content>
