--- a/src/app/pages/configurations/configurations.page.html
+++ b/src/app/pages/configurations/configurations.page.html
@@ -79,5 +79,5 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-button expand="block" (click)="toggleTheme()">Cambiar tema</ion-button>
+  <ion-button (click)="toggleTheme()" expand="block">Cambiar tema</ion-button>
 </ion-content>
